@@ -1,15 +1,17 @@
 [tox]
-envlist = py27,py33,py34,py35,pypy,pypy3,pep8
+envlist = py36,py37,py38,pypy3,pep8,coverage
 
 [testenv]
 deps = -e{toxinidir}[test]
-commands = py.test {posargs}
+commands = pytest {posargs}
+usedevelop = True
 
-[testenv:py35]
-commands = py.test --cov more.chameleon --cov-report term-missing {posargs}
+[testenv:coverage]
+basepython = python3
+commands = pytest --cov more.chameleon --cov-report term-missing {posargs}
 
 [testenv:pep8]
-basepython = python3.5
+basepython = python3
 deps = {[testenv]deps}
        flake8
 commands = flake8 more setup.py
